tests/errors/rescue_empty_clauses.dang
# A rescue clause block must contain at least one clause.
let x = "value" rescue { }
print(x)
